hphp/test/zend/good/ext/standard/tests/strings/bug63874.php
<?php
echo php_strip_whitespace(__FILE__);

return <<<A
a
A;
?>