hphp/test/zend/bad/ext-spl/SplFixedArray_fromArray_invalid_parameter_001.php
<?php
echo SplFixedArray::fromArray(17954);
?>